--- a/Back/LaSalle-1/src/main/resources/application.properties
+++ b/Back/LaSalle-1/src/main/resources/application.properties
@@ -4,12 +4,20 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/lasalle?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-
-#spring.jpa.properties.hibernate.jdbc.lob.nom_contextual_creation=true
-
-
-#`hibernate_sequence' doesn't exist
-#spring.jpa.hibernate.use-new-id-generator-mappings=false
-
-# drop n create table, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=none
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=andoridcache@gmail.com
+spring.mail.password=temporal123--
+
+# Configuration 
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
