--- a/Back/LaSalle-1/pom.xml
+++ b/Back/LaSalle-1/pom.xml
@@ -41,7 +41,11 @@
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy</artifactId>
 		</dependency>
-		
+		<dependency>
+	      <groupId>org.passay</groupId>
+	      <artifactId>passay</artifactId>
+	      <version>1.4.0</version>
+	    </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -91,7 +95,18 @@
 					</execution>
 				</executions>
 			</plugin>
+			
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
+	
+	
 
 </project>
